--- a/ProEventos-App/src/app/app.component.html
+++ b/ProEventos-App/src/app/app.component.html
@@ -1,12 +1,8 @@
-<div class="container text-center">
-  <h1>Eventos</h1>
+<app-nav></app-nav>
+<div class="container">
+  <hr>
 
   <app-eventos></app-eventos>
-
-  <h1>Palestrantes</h1>
-
-  <!--Chamada de componente em uma tela booooa-->
-  <app-palestrantes></app-palestrantes>
 </div>
 
 
