Organizacao, rota, links, toatrs e mais

--- a/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,5 +1,4 @@
-<h1>Eventos</h1>
-<hr>
+<app-titulo [titulo]="'Evento'"> </app-titulo>
 
 <div  class="form-inline">
   <div class="form-group mb-2">
@@ -16,7 +15,9 @@
     <tr>
       <th>
         <button type="button" class="btn btn-outline-light btn-sm"
-        (click)="alterarImagem()">{{!exibirImagem ? 'Exibir' : 'Ocultar'}}
+        (click)="alterarImagem()">
+        <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+        {{!exibirImagem ? 'Exibir' : 'Ocultar'}}
         </button>
       </th>
       <th>#</th>
@@ -38,15 +39,19 @@
         [style.margin.px]="margemImagem"
         >
       </td>
-      <td>{{evento.eventoId}}</td>
+      <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateTimeFormat}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lote[0].nome | uppercase}}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
+          <i class="fa fa-edit"></i>
+         </button>
+        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
@@ -60,3 +65,12 @@
 </table>
 
 <!--{{eventos | json }} -> retornar nomes dos campos para interpolação-->
+
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que quer deletar este evento</p>
+    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
+  </div>
+</ng-template>
