--- a/ProEventos-App/src/app/components/perfil/perfil.component.html
+++ b/ProEventos-App/src/app/components/perfil/perfil.component.html
@@ -1,6 +1,6 @@
 <app-titulo [titulo]="'Perfil'"> </app-titulo>
 <div class="card rounder shadow-sm">
-  <form>
+  <form [formGroup]="form">
     <div class="row p-3">
       <div class="col-lg-3 pt-1">
         <div class="card mb-3">
@@ -44,7 +44,9 @@
           </div>
           <div class="form-group col">
             <label>Título</label>
-            <select class="form-control">
+            <select class="form-control"
+            formControlName="titulo"
+            [ngClass]="{'is-invalid': f.titulo.errors && f.titulo.touched}">
               <option value=""></option>
               <option value="0">Não Quero</option>
               <option value="Senhorita">Tecnólogo(a)</option>
@@ -55,38 +57,79 @@
               <option value="Senhorita">Doutor(a)</option>
               <option value="Senhorita">Pós Doc</option>
             </select>
+            <div class="invalid-feedback">
+              Selecione um título
+            </div>
           </div>
           <div class="form-group col-sm-5">
             <label>Primeiro Nome</label>
-            <input type="text" class="form-control"/>
-
+            <input
+            formControlName="primeiroNome"
+            [ngClass]="{'is-invalid': f.primeiroNome.errors && f.primeiroNome.touched}"
+            type="text" class="form-control"/>
+            <div class="invalid-feedback">
+              Você deve informar seu nome
+            </div>
           </div>
           <div class="form-group col-sm-5">
             <label>Último nome</label>
-            <input type="text" class="form-control"/>
-
+            <input
+            ormControlName="ultimoNome"
+            [ngClass]="{'is-invalid': f.ultimoNome.errors && f.ultimoNome.touched}"
+            type="text" class="form-control"/>
+            <div class="invalid-feedback">
+              Último nome é obrigatório
+            </div>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-sm-5">
             <label>E-mail</label>
-            <input type="text" class="form-control" />
+            <input
+            formControlName="email"
+             [ngClass]="{'is-invalid': f.email.errors && f.email.touched}"
+            type="text" class="form-control" />
+
+            <div *ngIf="f.email.errors?.required && f.email.touched" class="invalid-feedback">
+              Email é obrigatório
+            </div>
+            <div *ngIf="f.email.errors?.email && f.email.touched" class="invalid-feedback">
+              Informe um e-mail válido
+            </div>
           </div>
           <div class="form-group col-sm-4">
             <label>Telefone</label>
-            <input type="text" class="form-control" />
+            <input
+            formControlName="telefone"
+            [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched }"
+            type="number" class="form-control" />
+            <div class="invalid-feedback">
+              Informe um número de telefone
+            </div>
           </div>
           <div class="form-group col-sm">
             <label>Função</label>
-            <select class="form-control">
+            <select
+            formControlName="funcao"
+            [ngClass]="{'is-invalid': f.funcao.errors && f.funcao.touched }"
+            class="form-control">
               <option value=""></option>
               <option value="Participante">Participante</option>
               <option value="Palestrante">Palestrante</option>
             </select>
+            <div class="invalid-feedback">
+              Selecione a função
+            </div>
           </div>
           <form-group class="col-12">
             <label>Descrição</label>
-            <input type="text" class="form-control" />
+            <input
+            formControlName="descricao"
+            [ngClass]="{'is-invalid': f.descricao.errors && f.descricao.touched }"
+             type="text" class="form-control" />
+             <div class="invalid-feedback">
+              Informe uma Descrição
+            </div>
           </form-group>
         </div>
         <div>
@@ -96,11 +139,29 @@
         <div class="form-row">
           <div class="form-group col-sm">
             <label>Senha</label>
-            <input type="password" class="form-control" />
+            <input
+            formControlName="senha"
+            [ngClass]="{'is-invalid': f.senha.errors && f.senha.touched}"
+             type="password" class="form-control" />
+             <div *ngIf="f.senha.errors?.required && f.senha.touched" class="invalid-feedback">
+              Senha é obrigatório
+            </div>
+            <div *ngIf="f.senha.errors?.minlength && f.senha.touched" class="invalid-feedback">
+              Senha deve conter no mínimo 6 caracteres
+            </div>
           </div>
           <div class="form-group col-sm">
             <label>Confirmar Senha</label>
-            <input type="password" class="form-control" />
+            <input
+            formControlName="confirmeSenha"
+            [ngClass]="{'is-invalid': f.confirmeSenha.errors && f.confirmeSenha.touched}"
+            type="password" class="form-control" />
+            <div *ngIf="f.confirmeSenha.errors?.required" class="invalid-feedback">
+              Corfimar senha é obrigatório
+            </div>
+            <div *ngIf="f.confirmeSenha.errors?.mustMatch" class="invalid-feedback">
+              As senhas não são iguais.
+            </div>
           </div>
         </div>
       </div>
