--- a/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -5,7 +5,7 @@
         <div class="form-group col-md-12">
           <label>Tema</label>
           <input type="text" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.tema.errors && f.tema.touched }"
+          [ngClass]="cssValidator(f.tema)"
             formControlName="tema"
             placeholder="Insira o Tema">
           <div *ngIf="f.tema?.errors?.required" class="invalid-feedback">
@@ -23,7 +23,7 @@
         <div class="form-group col-md-8">
           <label>Local</label>
           <input type="text" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.local.errors && f.local.touched }"
+          [ngClass]="cssValidator(f.local)"
           formControlName="local"
           placeholder="">
           <div *ngIf="f.local?.errors?.required" class="invalid-feedback">
@@ -33,7 +33,10 @@
         <div class="form-group col-md-4">
           <label>Data e Hora</label>
           <input type="datetime" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.dataEvento.errors && f.dataEvento.touched }"
+          [ngClass]="cssValidator(f.dataEvento)"
+          bsDatepicker
+          [bsConfig]="bsConfig"
+          value="{{evento.dataEvento | DateTimeFormat}}"
           formControlName="dataEvento"
           placeholder="">
           <div *ngIf="f.dataEvento?.errors?.required" class="invalid-feedback">
@@ -45,7 +48,7 @@
         <div class="form-group col-md-2">
           <label>Qtd Pessoas</label>
           <input type="number" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.qtdPessoas.errors && f.qtdPessoas.touched }"
+          [ngClass]="cssValidator(f.qtdPessoas)"
           formControlName="qtdPessoas"
           placeholder="">
           <div *ngIf="f.qtdPessoas.errors?.required" class="invalid-feedback">
@@ -58,7 +61,7 @@
         <div class="form-group col-md-2">
           <label>Telefone</label>
           <input type="text" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.telefone.errors && f.telefone.touched }"
+          [ngClass]="cssValidator(f.telefone)"
           formControlName="telefone" placeholder="(000) 90000-0000">
           <div *ngIf="f.telefone.errors?.required" class="invalid-feedback">
             Telefone é obrigatório
@@ -67,7 +70,7 @@
         <div class="form-group col-md-4">
           <label>Email</label>
           <input type="text" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.email.errors && f.email.touched }"
+          [ngClass]="cssValidator(f.email)"
           formControlName="email" placeholder="e-mail">
           <div  *ngIf="f.email.errors?.required" class="invalid-feedback">
             E-mail é obrigatório
@@ -79,7 +82,7 @@
         <div class="form-group col-md-4">
           <label>Imagem</label>
           <input type="text" class="form-control is-invalid"
-          [ngClass]="{'is-invalid': f.imagemURL.errors && f.imagemURL.touched }"
+          [ngClass]="cssValidator(f.imagemURL)"
           formControlName="imagemURL" placeholder="imagem">
           <div  *ngIf="f.imagemURL.errors?.required" class="invalid-feedback">
             Imagim é obrigatório
@@ -92,7 +95,7 @@
         <button class="btn btn-outline-secondary mr-auto border" (click)="resertForm()">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!form.valid">
+        <button class="btn btn-success" [disabled]="!form.valid" (click)="salvarAlteracao()">
           <!--<span class="spinner-border spinner-border-sm mr-1"></span>-->
           Salvar Evento
         </button>
