--- a/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -56,9 +56,9 @@
         <td class="d-none d-md-table-cell">{{evento.local}}</td>
         <td class="d-none d-md-table-cell">{{evento.dataEvento | DateTimeFormat}}</td>
         <td class="d-none d-md-table-cell">{{evento.qtdPessoas}}</td>
-        <td>{{evento.lote[0].nome | uppercase}}</td>
+        <td>{{evento.lote[0]?.nome | uppercase}}</td>
         <td>
-          <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir" (click)="openModal(template)">
+          <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir" (click)="openModal($event, template, evento.id)">
             <i class="fa fa-trash"></i>
           </button>
         </td>
@@ -78,7 +78,7 @@
 
 <ng-template #template>
   <div class="modal-body text-center">
-    <p>Tem certeza que quer deletar este evento</p>
+    <p>Tem certeza que quer deletar o evento de Código{{this.eventoId}} evento</p>
     <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
     <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
   </div>
