--- a/ProEventos-App/src/app/components/dashboard/dashboard.component.html
+++ b/ProEventos-App/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
-<app-titulo [titulo]="'Dashboard'"> </app-titulo>
+<app-titulo [titulo]="'Dashboard'" [iconClass]="'fas fa-chart-bar'"> </app-titulo>
 
